[package]
name = "spectra"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.28.1"
egui = "0.28.1"
egui-video = "0.7.0"
egui_extras = { version = "0.28.1", features = ["all_loaders"] }
image = { version = "0.25.2", features = ["jpeg", "png", "gif", "tiff"] }
serde = "1.0.210"
toml = "0.8.19"
